assets/css/style.css
/* Modules and Variables
   ========================================================================== */
/* Color Scheme
   ========================================================================== */
/* Mixins
   ========================================================================== */
@import url(vendor/bootstrap.min.css);
@import url(vendor/font-awesome/css/font-awesome.min.css);
/* line 6, modules/_mixins.scss */
::-webkit-input-placeholder {
  color: #ddd;
}

/* line 7, modules/_mixins.scss */
:-moz-placeholder {
  color: #ddd;
}

/* line 8, modules/_mixins.scss */
::-moz-placeholder {
  color: #ddd;
}

/* line 9, modules/_mixins.scss */
:-ms-input-placeholder {
  color: #ddd;
}

/* Partials
   ========================================================================== */
/* Typography
   ========================================================================== */
@font-face {
  font-family: "Montserrat-Regular";
  src: url(../fonts/Montserrat-Regular.ttf);
}
@font-face {
  font-family: "Merriweather-Bold";
  src: url(../fonts/Merriweather-Bold.otf);
}
/* line 14, partials/_typography.scss */
html, body {
  height: 100%;
  width: 100%;
}

/* line 19, partials/_typography.scss */
html {
  font-size: 62.5%;
}

/* line 23, partials/_typography.scss */
h1, h2, h3, h4, h5, h6 {
  font-family: "Montserrat-Regular";
  margin: 0;
}

/* line 28, partials/_typography.scss */
h1 {
  font-size: 98px;
}

/* line 29, partials/_typography.scss */
h2 {
  font-size: 46px;
}

/* line 30, partials/_typography.scss */
h3 {
  font-size: 40px;
}

/* line 31, partials/_typography.scss */
h4 {
  font-size: 22px;
}

/* line 32, partials/_typography.scss */
h5 {
  font-size: 20px;
}

/* line 33, partials/_typography.scss */
h6 {
  font-size: 18px;
}

/* line 34, partials/_typography.scss */
p {
  font-size: 16px;
}

/* line 36, partials/_typography.scss */
li, a, p {
  font-family: "Montserrat-Regular";
}

/* Footer Stay Down
   ========================================================================== */
/* line 4, partials/footer-stay-down.scss */
.fsd-wrap {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
  display: table;
  width: 100%;
  height: 100%;
}
/* line 15, partials/footer-stay-down.scss */
.fsd-wrap .content-wrap {
  display: table-row;
  height: 100%;
}
/* line 20, partials/footer-stay-down.scss */
.fsd-wrap .footer-wrap {
  display: table-row;
  height: 1px;
}

/* Helpers
   ========================================================================== */
/* line 4, partials/_helpers.scss */
._pull-left {
  float: left !important;
}

/* line 5, partials/_helpers.scss */
._pull-right {
  float: right !important;
}

/* line 6, partials/_helpers.scss */
._text-center {
  text-align: center !important;
}

/* line 7, partials/_helpers.scss */
._remove-padding {
  padding: 0 !important;
}

/* line 8, partials/_helpers.scss */
._remove-margin {
  margin: 0 !important;
}

/* line 9, partials/_helpers.scss */
._position-relative {
  position: relative;
}

@media screen and (max-width: 767px) {
  /* line 14, partials/_helpers.scss */
  ._sm-padding-rm {
    padding: 0;
  }

  /* line 15, partials/_helpers.scss */
  ._sm-text-center {
    text-align: center !important;
  }

  /* line 16, partials/_helpers.scss */
  ._sm-pull-left {
    float: left !important;
  }

  /* line 17, partials/_helpers.scss */
  ._sm-pull-right {
    float: right !important;
  }
}
/* Pages
   ========================================================================== */
/* Homepage
   ========================================================================== */
/* line 4, pages/_homepage.scss */
html, body {
  padding: 0;
  margin: 0;
}

/* line 9, pages/_homepage.scss */
.about-us {
  background-color: #f5f5f5;
}
/* line 13, pages/_homepage.scss */
.about-us .logo {
  padding: 10px 0 0.5% 0;
}
/* line 17, pages/_homepage.scss */
.about-us .logo img {
  width: 150px;
  height: auto;
}
/* line 23, pages/_homepage.scss */
.about-us .background {
  color: #e4e3e3;
  position: absolute;
  top: 35px;
  left: 12%;
}
/* line 29, pages/_homepage.scss */
.about-us .background h1 {
  font-family: "Merriweather-Bold" !important;
}
/* line 34, pages/_homepage.scss */
.about-us .contents {
  padding: 20px 0 10px 0;
  position: relative;
  margin-top: 70px;
  height: 190px;
  max-height: 190px;
}
/* line 41, pages/_homepage.scss */
.about-us .contents h2 {
  padding-right: 5%;
  display: inline-block;
}
/* line 46, pages/_homepage.scss */
.about-us .contents .line {
  border-top: 1px solid #30353b;
  padding-top: 5px;
  padding-bottom: 5px;
  margin: 35px auto 0;
  width: 10%;
  position: absolute;
  left: -12%;
}
/* line 56, pages/_homepage.scss */
.about-us .contents .line:after {
  content: "";
  width: 10px;
  height: 10px;
  background: #30353b;
  border-radius: 5px;
  position: absolute;
  top: -6px;
}
/* line 66, pages/_homepage.scss */
.about-us .contents .line:after {
  right: 0;
}
/* line 73, pages/_homepage.scss */
.about-us .social-icons a {
  display: inline;
}
/* line 77, pages/_homepage.scss */
.about-us .social-icons a i {
  color: #e4e3e3;
  padding: 15px 10px 20px;
}
/* line 84, pages/_homepage.scss */
.about-us .social-icons .line {
  border-top: 3px solid #e4e3e3;
  padding-bottom: 9px;
  width: 5%;
  display: inline-block;
}

/* line 93, pages/_homepage.scss */
#typed {
  color: #faae1e;
  content: '$x';
  font-size: 50px;
}

/* line 113, pages/_homepage.scss */
.typed-cursor {
  opacity: 1;
  font-weight: 100;
  -webkit-animation: blink 0.7s infinite;
  -moz-animation: blink 0.7s infinite;
  -ms-animation: blink 0.7s infinite;
  -o-animation: blink 0.7s infinite;
  animation: blink 0.7s infinite;
}

@-webkit-keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@-moz-keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@-o-keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@keyframes blink {
  0% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  100% {
    opacity: 1;
  }
}
@media screen and (max-width: 768px) {
  /* line 127, pages/_homepage.scss */
  .about-us {
    padding-left: 10%;
  }
  /* line 130, pages/_homepage.scss */
  .about-us .background {
    top: 70px;
    left: 0;
    position: absolute;
  }
  /* line 135, pages/_homepage.scss */
  .about-us .background h1 {
    font-size: 50px;
  }
  /* line 143, pages/_homepage.scss */
  .about-us .contents {
    position: relative;
    max-height: none;
    height: auto;
  }
  /* line 148, pages/_homepage.scss */
  .about-us .contents .line {
    border-top: 1px solid #30353b;
    padding-top: 5px;
    padding-bottom: 5px;
    margin: 25px auto 0;
    width: 50px;
    position: absolute;
    left: -60px;
  }
  /* line 158, pages/_homepage.scss */
  .about-us .contents .line:after {
    content: "";
    width: 10px;
    height: 10px;
    background: #30353b;
    border-radius: 5px;
    position: absolute;
    top: -6px;
  }
  /* line 168, pages/_homepage.scss */
  .about-us .contents h2 {
    font-size: 33px;
    line-height: 44px;
  }
  /* line 178, pages/_homepage.scss */
  .about-us .social-icons .line {
    border-top: 3px solid #e4e3e3;
    padding-top: 5px;
    padding-bottom: 5px;
    width: 50px;
    display: inline-block;
  }

  /* line 192, pages/_homepage.scss */
  #typed {
    font-size: 33px;
  }
}
/* Third-party
   ========================================================================== */

